docroot/themes/humsci/humsci_basic/src/scss/partials/tools/_mixins.text.scss
@mixin hb-text-reset {
  background: initial;
  border: initial;
  color: initial;
  font-size: inherit;
  font-style: initial;
  font-weight: initial;
  line-height: inherit;
  margin: initial;
  padding: initial;
  position: initial;
  quotes: initial;
  text-decoration: initial;
  text-transform: initial;
  transition: none;
}

@mixin hb-block-heading {
  @include hb-themes(('colorful', 'airy')) {
    font-weight: hb-theme-font-weight(semibold);
    font-size: hb-calculate-rems(24px);
    line-height: 120%;

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(27px);
      line-height: 117%;
    }
  }
}

@mixin hb-heading-1 {
  @include hb-themes(('colorful', 'airy')) {
    font-weight: hb-theme-font-weight(semibold);
    font-size: hb-calculate-rems(36px);
    line-height: 112%;

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(46px);
    }
  }

  @include hb-traditional {
    font-family: $hb-traditional-font--serif;
    font-weight: hb-theme-font-weight(regular);
    font-size: hb-calculate-rems(34px);
    line-height: 110%;

    .hb-font-sans-serif & {
      font-family: $hb-traditional-font--sans;
    }

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(42px);
    }
  }
}

@mixin hb-heading-2 {
  @include hb-themes(('colorful', 'airy')) {
    font-weight: hb-theme-font-weight(semibold);
    font-size: hb-calculate-rems(32px);
    line-height: 112%;

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(38px);
    }
  }

  @include hb-traditional {
    font-family: $hb-traditional-font--serif;
    font-weight: hb-theme-font-weight(regular);
    font-size: hb-calculate-rems(30px);
    line-height: 108%;

    .hb-font-sans-serif & {
      font-family: $hb-traditional-font--sans;
    }

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(36px);
    }
  }
}

@mixin hb-heading-3 {
  @include hb-themes(('colorful', 'airy')) {
    @include hb-block-heading;
  }

  @include hb-traditional {
    font-family: $hb-traditional-font--serif;
    font-weight: hb-theme-font-weight(regular);
    font-size: hb-calculate-rems(22px);
    line-height: 120%;

    .hb-font-sans-serif & {
      font-family: $hb-traditional-font--sans;
    }

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(25px);
      line-height: 115%;
    }
  }
}

@mixin hb-heading-4 {
  @include hb-themes(('colorful', 'airy')) {
    font-weight: hb-theme-font-weight(semibold);
    font-size: hb-calculate-rems(20px);
    line-height: 122%;

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(22px);
    }
  }

  @include hb-traditional {
    font-weight: hb-theme-font-weight(semibold);
    font-size: hb-calculate-rems(18px);
    line-height: 124%;

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(20px);
    }
  }
}

@mixin hb-heading-5 {
  @include hb-themes(('colorful', 'airy')) {
    font-weight: hb-theme-font-weight(semibold);
    font-size: hb-calculate-rems(18px);
    line-height: 124%;

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(20px);
    }
  }

  @include hb-traditional {
    font-weight: hb-theme-font-weight(semibold);
    font-size: hb-calculate-rems(16px);
    line-height: 126%;

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(18px);
    }
  }
}

@mixin hb-heading-6 {
  text-transform: uppercase;

  @include hb-themes(('colorful', 'airy')) {
    font-weight: hb-theme-font-weight(semibold);
    font-size: hb-calculate-rems(16px);
    line-height: 128%;

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(18px);
    }
  }

  @include hb-traditional {
    font-weight: hb-theme-font-weight(bold);
    font-size: hb-calculate-rems(14px);
    line-height: 124%;

    @include grid-media-min('md') {
      font-size: hb-calculate-rems(16px);
    }
  }
}

@mixin hb-subtitle {
  font-weight: hb-theme-font-weight(semibold);
  line-height: 122%;
  font-size: hb-calculate-rems(16px);

  @include grid-media-min('lg') {
    font-size: hb-calculate-rems(18px);
  }
}

@mixin hb-subheading {
  @include hb-themes(('colorful', 'airy')) {
    font-weight: hb-theme-font-weight(semibold);
    font-size: hb-calculate-rems(15px);
    line-height: 131%;
  }

  @include hb-traditional {
    text-transform: uppercase;
    font-weight: hb-theme-font-weight(semibold);
    font-size: hb-calculate-rems(15px);
    line-height: 131%;
  }
}

@mixin hb-body--small {
  font-weight: hb-theme-font-weight(regular);
  font-size: hb-calculate-rems(16px);
  line-height: 122%;
}

@mixin hb-body--medium {
  font-weight: hb-theme-font-weight(regular);
  font-size: hb-calculate-rems(18px);
  line-height: 127%;
}

@mixin hb-description {
  @include hb-themes(('colorful', 'airy')) {
    @include hb-body--small;

    @include grid-media-min('lg') {
      @include hb-body--medium;
    }
  }

  @include hb-traditional {
    @include hb-body--medium;
  }
}

@mixin hb-blockquote {
  color: var(--palette--primary);
  font-size: hb-calculate-rems(24px);
  font-weight: hb-theme-font-weight(regular);
  line-height: 1.27;

  @include grid-media-min('lg') {
    font-size: hb-calculate-rems(28px);
  }

  @include hb-traditional {
    font-family: $hb-traditional-font--serif;
  }

  // A utility class that can be applied via layout builder to override the text color to black
  .hb-blockquote-black-text & {
    color: var(--palette--black);
  }

  .hb-dark-pattern &,
  .hb-dark-inversion .views-element-container &,
  .hb-dark-pattern.hb-local-footer & {
    color: var(--palette--white);
  }

  &:not(.hb-testimonial__quote) {
    position: relative;
    padding: hb-calculate-rems(40px) hb-calculate-rems(36px);

    &::before,
    &::after {
      @include hb-icon-background('close-quote-mark', 'tertiary');

      content: '';
      position: absolute;
      background-repeat: no-repeat;
      background-size: cover;
      background-position: center;
      width: hb-calculate-rems(36px);
      height: hb-calculate-rems(31px);

      .hb-dark-pattern &,
      .hb-dark-inversion .views-element-container & {
        @include hb-icon-background('close-quote-mark', 'white');
      }

      .hb-dark-pattern.hb-local-footer & {
        @include hb-icon-background('close-quote-mark', 'tertiary');
      }
    }

    &::before {
      left: hb-calculate-rems(-36px);
      top: hb-calculate-rems(14px);
      transform: rotate(180deg);
      transform-origin: center;
    }

    &::after {
      right: 0;
    }
  }
}

@mixin hb-field-label {
  font-style: normal;
  text-transform: uppercase;
  color: var(--palette--black);

  @include hb-themes(('colorful', 'airy')) {
    font-weight: hb-theme-font-weight(bold);
    font-size: hb-calculate-rems(15px);
    margin-bottom: hb-calculate-rems(4px);
  }

  @include hb-traditional {
    font-weight: hb-theme-font-weight(semibold);
    font-size: hb-calculate-rems(14px);
    margin-bottom: 0;
  }
}

@mixin hb-field-label--featured {
  font-size: hb-calculate-rems(16px);
  font-style: normal;
  text-transform: inherit;
  color: var(--palette--secondary);

  .hb-well {
    color: var(--palette--secondary-darken-12) !important;
  }

  @include hb-colorful {
    .hc-pairing-ocean & {
      color: var(--palette--secondary-darken-12);
    }
  }
}

@mixin hb-descriptor {
  color: var(--palette--gray-dark);
  font-size: hb-calculate-rems(16px);

  @include grid-media-min('lg') {
    font-size: hb-calculate-rems(18px);
  }
}

// Styles for WYSIWYG / text captions
@mixin hb-caption($italic: false) {
  @include hb-text-reset;
  color: var(--palette--gray-dark);

  @if $italic {
    font-style: italic;
  }

  @include hb-themes(('colorful', 'airy')) {
    font-size: hb-calculate-rems(14px);
  }

  @include hb-traditional {
    font-size: hb-calculate-rems(16px);
  }

  .hb-dark-pattern & {
    @include hb-themes(('colorful', 'airy')) {
      color: var(--palette--white);
    }

    @include hb-traditional {
      color: var(--palette--gray-light);
    }
  }
}

// Styles for captions and credits
@mixin hb-caption-credit {
  color: var(--palette--white);
  font-style: italic;
  font-size: hb-calculate-rems(12px);
  position: absolute;
  bottom: 0;
  width: 100%;
  z-index: $hb-z-index-small-5;
  text-align: right;
  line-height: 120%;
  height: auto;
  padding: hb-calculate-rems(16px) hb-calculate-rems(7px) hb-calculate-rems(8px)
    15%; // Using a percentage to the left to control the width of the captions

  @include grid-media-min('sm') {
    // the right side calculation is lower to adjust for the margin-right on the child elements
    padding: hb-calculate-rems(24px) hb-calculate-rems(12px)
      hb-calculate-rems(16px) 15%;
  }

  @include hb-themes(('colorful', 'airy')) {
    background: linear-gradient(to top, var(--palette--black), transparent);

    .paragraph--type--hs-carousel & {
      // the percentage on this left side is larger to prevent the caption from running under carousel overlay
      @include grid-media-min('md') {
        padding: hb-calculate-rems(24px) hb-calculate-rems(12px)
          hb-calculate-rems(16px) 58%;
      }
    }
  }

  @include hb-traditional {
    background: linear-gradient(to top, var(--palette--black), transparent);
  }

  .hb-card__graphics--has-date & {
    @include grid-media-min('sm') {
      // the right side calculation is lower to adjust for the margin-right on the child elements
      padding: hb-calculate-rems(24px) hb-calculate-rems(12px)
        hb-calculate-rems(16px) hb-calculate-rems(100px);
    }
  }

  p,
  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  blockquote,
  cite,
  code,
  li,
  dd,
  dt,
  span,
  strong,
  em,
  a,
  .hs-button,
  .hs-button--big,
  .hs-secondary-button,
  .hs-more-link,
  .hs-external-link,
  .hs-file-link,
  .hs-pdf-link,
  .hs-private-link {
    @include hb-text-reset;
    font-style: italic;
    color: var(--palette--white);
  }

  h1 a,
  h2 a,
  h3 a,
  h4 a,
  h5 a,
  h6 a,
  a {
    color: var(--palette--white);
    text-decoration: underline !important;
    display: inline;

    &::before,
    &::after {
      display: none !important;
    }

    &:hover,
    &:focus {
      text-decoration: none !important;
      box-shadow: none;
    }
  }

  dl,
  ul,
  ol {
    margin: 0;
    padding: 0;
    display: inline-block;
  }

  li {
    &::before {
      display: none;
    }
  }

  strong {
    font-weight: 600;
  }
}

// Splash Font Animation
@mixin hb-font-splash-animation {
  @include hb-traditional {
    @include hasAnimationEnhancements(
      ease-in-out,
      1700ms,
      traditionalSplashFont
    );
  }

  @include hb-themes(('colorful', 'airy')) {
    @include hasAnimationEnhancements(ease-in-out, 2000ms, colorfulSplashFont);
  }

  @include reducedMotionPrefered;
}

// Lead Font Animation
@mixin hb-font-lead-animation {
  @include hb-traditional {
    @include hasAnimationEnhancements(ease-in-out, 1700ms, traditionalLeadFont);
  }

  @include hb-themes(('colorful', 'airy')) {
    @include hasAnimationEnhancements(ease-in-out, 2000ms, colorfulLeadFont);
  }

  @include reducedMotionPrefered;
}

// Removes animation styles when Reduced Motion is enabled
@mixin reducedMotionPrefered {
  @media screen and (prefers-reduced-motion: reduce) {
    &.animate {
      .hb-has-animation-enhancements & {
        animation: none;
      }
    }
  }
}

@mixin hasAnimationEnhancements($timingFunction, $duration, $animationName) {
  &.animate {
    .hb-has-animation-enhancements & {
      animation-timing-function: $timingFunction;
      animation-duration: $duration;
      animation-fill-mode: forwards;
      animation-name: $animationName;
    }
  }
}

